--- a/package.json
+++ b/package.json
@@ -10,33 +10,36 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
-    "@react-native-firebase/app": "^20.3.0",
+    "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.3.0",
-    "@react-native-firebase/messaging": "^20.3.0",
+    "@react-native-firebase/messaging": "^20.5.0",
     "@react-native-picker/picker": "^2.7.7",
     "@react-navigation/native": "^6.1.18",
     "@react-navigation/native-stack": "^6.11.0",
     "eas-cli": "^10.2.1",
     "expo": "~51.0.22",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
     "expo-image-picker": "~15.0.7",
+    "expo-notifications": "~0.28.15",
     "expo-status-bar": "~1.12.1",
     "firebase": "^10.12.4",
     "react": "18.2.0",
     "react-native": "0.74.3",
+    "react-native-background-fetch": "^4.2.5",
     "react-native-elements": "^3.4.3",
     "react-native-gesture-handler": "^2.18.1",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^3.15.0",
     "react-native-safe-area-context": "^4.10.5",
     "react-native-screens": "^3.31.1",
-    "react-native-vector-icons": "^10.1.0",
-    "expo-notifications": "~0.28.15",
-    "expo-device": "~6.0.2",
-    "expo-constants": "~16.0.2"
+    "react-native-vector-icons": "^10.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.2.45",
+    "@types/react-native-push-notification": "^8.1.4",
     "typescript": "^5.1.3"
   },
   "private": true
