--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.24.0",
+    "@react-native-community/checkbox": "^0.5.17",
     "@react-native-firebase/app": "^20.5.0",
     "@react-native-firebase/auth": "^20.3.0",
     "@react-native-firebase/messaging": "^20.5.0",
